added changes to html files

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Todo Manager</title>
-  <link rel="stylesheet" href="todostyle.css" />
+  <link rel="stylesheet" href="todostyle.css"/>
 </head>
 <body>
   <header>
@@ -45,6 +45,6 @@
     <p>&copy; 2025 Todo Manager</p>
   </footer>
 
-  <script src="app.js"></script>
+  <script src="todo.js"></script>
 </body>
 </html>
